src/style.css
/* ... */
ul,
ol {
  margin-left: var(--spacing-0);
  margin-right: var(--spacing-0);
  padding: var(--spacing-0);
  margin-bottom: var(--spacing-8);
  list-style-position: outside;
  list-style-image: none;
}

ul li,
ol li {
  padding-left: var(--spacing-0);
  margin-bottom: calc(var(--spacing-8) / 2);
}

li > p {
  margin-bottom: calc(var(--spacing-8) / 2);
}

li *:last-child {
  margin-bottom: var(--spacing-0);
}

li > ul {
  margin-left: var(--spacing-8);
  margin-top: calc(var(--spacing-8) / 2);
}

blockquote {
  color: var(--color-text-light);
  margin-left: calc(-1 * var(--spacing-6));
  margin-right: var(--spacing-8);
  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
  border-left: var(--spacing-1) solid var(--color-primary);
  font-size: var(--fontSize-2);
  font-style: italic;
  margin-bottom: var(--spacing-8);
}

blockquote > :last-child {
  margin-bottom: var(--spacing-0);
}

blockquote > ul,
blockquote > ol {
  list-style-position: inside;
}

table {
  width: 100%;
  margin-bottom: var(--spacing-8);
  border-collapse: collapse;
  border-spacing: 0.25rem;
}

table thead tr th {
  border-bottom: 1px solid var(--color-accent);
}

/* Link */

a {
  color: var(--color-primary);
}

a:hover,
a:focus {
  text-decoration: none;
}

/* Custom classes */

.global-wrapper {
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-10) var(--spacing-5);
}

.global-wrapper[data-is-root-path="true"] .bio {
  margin-bottom: var(--spacing-20);
}

.global-header {
  margin-bottom: var(--spacing-12);
}

.main-heading {
  font-size: var(--fontSize-7);
  margin: 0;
}

.post-list-item {
  margin-bottom: var(--spacing-8);
  margin-top: var(--spacing-8);
}

.post-list-item p {
  margin-bottom: var(--spacing-0);
}

.post-list-item h2 {
  font-size: var(--fontSize-4);
  color: var(--color-primary);
  margin-bottom: var(--spacing-2);
  margin-top: var(--spacing-0);
}

.post-list-item header {
  margin-bottom: var(--spacing-4);
}

.header-link-home {
  font-weight: var(--fontWeight-bold);
  font-family: var(--font-heading);
  text-decoration: none;
  font-size: var(--fontSize-2);
}

.bio {
  display: flex;
  margin-bottom: var(--spacing-16);
}

.bio p {
  margin-bottom: var(--spacing-0);
}

.bio-avatar {
  margin-right: var(--spacing-4);
  margin-bottom: var(--spacing-0);
  min-width: 50px;
  border-radius: 100%;
}

.blog-post header h1 {
  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
}

.blog-post header p {
  font-size: var(--fontSize-2);
  font-family: var(--font-heading);
}

.blog-post-nav ul {
  margin: var(--spacing-0);
}

.blog-list {
  margin: 0;
  padding: 0;
}

.blog-item {
  display: flex; 
  justify-content: space-between; 
  align-items: center; 
  margin-bottom: 0.5rem; 
  padding: 0.1rem; 
  transition: background-color 0.3s ease, border-radius 0.3s ease; 
}

.blog-item:hover {
  background-color: rgba(255, 255, 255, 0.1); 
  border-radius: 15px; 
}

.blog-title {
  font-weight: bold;
  color: #007acc; 
  text-decoration: none;
  transition: color 0.3s ease; 
}

.blog-title:hover {
  color: #007acc; 
}

.blog-date {
  color: white; 
  font-size: 0.9rem; 
  transition: color 0.3s ease; 
}

.blog-date:hover {
  color: #007acc; 
}

.gatsby-highlight {
  margin-bottom: var(--spacing-8);
}

/* Hero */
.hero-wrapper {
  display: grid;
}

.hero-description {
  margin: 1.5rem 0;
  font-size: 1.1rem;
  line-height: 1.6;
  color: var(--font-color-hero-description);
  font-weight: 500;
}

.decoration {
  display: flex;
  align-items: center;
  order: 1;
}

@media screen and (min-width: 700px) {
  .hero-wrapper {
    padding-top: 0;
    display: grid;
    grid-template-columns: 4fr 2fr;
    align-items: center;
    gap: 1.5rem;
  }

  .hero-description {
    grid-column: 1;
    margin: 1.5rem 0 0;
    font-size: 1.2rem;
  }

  .decoration {
    grid-column: 2;
    justify-content: flex-end;
    align-self: start;
    margin-top: -150px
  }
}

/* Containers */
.container {
  max-width:780px;
  padding: 0 1.5rem;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width: 700px) {
  .container {
    padding: 0 2rem;
  }
}


/* Media queries */

@media (max-width: 42rem) {
  blockquote {
    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
    margin-left: var(--spacing-0);
  }
  ul,
  ol {
    list-style-position: inside;
  }
}

